--- a/_parties/הימין החדש.md
+++ b/_parties/הימין החדש.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: הימין החדש
-position: בעד
+position: עמדה אמביולנטית
 description: מפלגת הימין החדש בעד תחבורה ציבורית בשבת עם מגבלות, על פי אמנת גביזון-מדן
 image: /images/parties/הימין החדש.png
 ---
